--- a/_config.yml
+++ b/_config.yml
@@ -60,11 +60,16 @@ plugins:
 author:
   name   : "Freddie Christiansen"
   avatar : "/assets/images/bio-photo.jpg"
-  bio    : "Hi, I'm Freddie. Update-test 1,2,3."
+  bio    : "Hi, I'm Freddie. I like PowerShell."
   links:
     - label: "Website"
       icon: "fas fa-fw fa-link"
       url: "https://"
+    - label: "Hamar, Norway"
+      icon: "fas fa-map-marker-alt"
+    - label: Mail"
+      icon: "far fa-envelope"
+      url: "freddie@cloudpilot.no
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
       url: "https://twitter.com/"
