--- a/_config.yml
+++ b/_config.yml
@@ -65,11 +65,11 @@ author:
     - label: "Website"
       icon: "fas fa-fw fa-link"
       url: "https://"
-    - label: "Hamar - Norway"
+    - label: "Hamar, Norway"
       icon: "fas fa-map-marker-alt"
-    - label: Mail"
+    - label: "Mail"
       icon: "far fa-envelope"
-      url: "freddie@cloudpilot.no
+      url: "mailto:freddie@cloudpilot.no
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
       url: "https://twitter.com/"
