--- a/_config.yml
+++ b/_config.yml
@@ -61,6 +61,7 @@ author:
   name   : "Freddie Christiansen"
   avatar : "/assets/images/bio-photo.jpg"
   bio    : "Hi, I'm Freddie. I like PowerShell."
+  location : "Hamar, Norway"
   links:
     - label: "Website"
       icon: "fas fa-fw fa-link"
