--- a/_config.yml
+++ b/_config.yml
@@ -68,9 +68,9 @@ author:
       url: "https://"
     - label: "Hamar, Norway"
       icon: "fas fa-map-marker-alt"
-    - label: "Twitter"
-      icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/"
+    - label: "Mail"
+      icon: "far fa-envelope"
+      url: "freddie@cloudpilot.no"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/"
