--- a/_config.yml
+++ b/_config.yml
@@ -70,7 +70,7 @@ author:
       url: "mailto:freddie@cloudpilot.no"
     - label: " LinkedIn"
       icon: "fab fa-linkedin"
-      url: "www.linkedin.com/in/freddie-christiansen-64305b106"
+      url: "https://www.linkedin.com/in/freddie-christiansen-64305b106"
 
 footer:
   links:
