--- a/_config.yml
+++ b/_config.yml
@@ -97,7 +97,7 @@ defaults:
       layout: single
       author_profile: false
       read_time: true
-      comments: false
+      comments: true
       share: true
       related: true
   # _pages
