--- a/_config.yml
+++ b/_config.yml
@@ -29,8 +29,8 @@ minimal_mistakes_skin: dark
 search: false
 disqus:
     shortname: cloudpilot
-baseurl: "repo_name"
-url : "https://username.github.io/repo_name"
+baseurl: "my-blog"
+url : "https://github.com/freddiemc88/my-blog"
 
 # Build settings
 markdown: kramdown
