--- a/_config.yml
+++ b/_config.yml
@@ -67,7 +67,7 @@ plugins:
 
 author:
   name   : "Freddie Christiansen"
-  avatar : "/assets/images/bio-photo.jpg"
+  avatar : "/assets/images/Freddie_2020_Profil.png"
   bio    : "Hi, I'm Freddie. I like PowerShell."
   location : "Near Hamar, Norway"
   links:
