--- a/_config.yml
+++ b/_config.yml
@@ -67,7 +67,7 @@ plugins:
 
 author:
   name   : "Freddie Christiansen"
-  avatar : "/assets/images/bio-photo_2021.png"
+  avatar : "/assets/images/freddie.png"
   bio    : "Hi, I'm Freddie. I like PowerShell."
   location : "Near Hamar, Norway"
   links:
@@ -76,6 +76,9 @@ author:
     - label: " Mail"
       icon: "far fa-envelope"
       url: "mailto:freddie@cloudpilot.no"
+    - label: "GitHub"
+      icon: "fab fa-github"
+      url: "https://www.github.com/freddiecode
     - label: " LinkedIn"
       icon: "fab fa-linkedin"
       url: "https://www.linkedin.com/in/freddie-christiansen-64305b106"
