--- a/_config.yml
+++ b/_config.yml
@@ -78,7 +78,7 @@ author:
       url: "mailto:freddie@cloudpilot.no"
     - label: " GitHub"
       icon: "fab fa-github"
-      url: "https://www.github.com/freddiecode
+      url: "https://www.github.com/freddiecode"
     - label: " LinkedIn"
       icon: "fab fa-linkedin"
       url: "https://www.linkedin.com/in/freddie-christiansen-64305b106"
