--- a/_config.yml
+++ b/_config.yml
@@ -82,6 +82,12 @@ author:
     - label: " LinkedIn"
       icon: "fab fa-linkedin"
       url: "https://www.linkedin.com/in/freddie-christiansen-64305b106"
+      
+<img src="/assets/images/azure-fundamentals-600x600.png" alt="AZ900" width="120" height="120">
+
+<img src="/assets/images/microsoft-certified-fundamentals-badge.svg" alt="MS365" width="120" height="120">
+
+<img src="/assets/images/CMNA.png" alt="MS365" width="320" height="105">
 
 footer:
   links:
