--- a/_config.yml
+++ b/_config.yml
@@ -85,9 +85,9 @@ author:
       
 #<img src="/assets/images/azure-fundamentals-600x600.png" alt="AZ900" width="120" height="120">
 
-<img src="/assets/images/microsoft-certified-fundamentals-badge.svg" alt="MS365" width="120" height="120">
+#<img src="/assets/images/microsoft-certified-fundamentals-badge.svg" alt="MS365" width="120" height="120">
 
-<img src="/assets/images/CMNA.png" alt="MS365" width="320" height="105">
+#<img src="/assets/images/CMNA.png" alt="MS365" width="320" height="105">
 
 footer:
   links:
