--- a/_config.yml
+++ b/_config.yml
@@ -68,7 +68,7 @@ plugins:
 author:
   name   : "Freddie Christiansen"
   avatar : "/assets/images/image2.jpg"
-  bio    : " "
+  bio    : "Senior Engineer"
   location : "Near Hamar, Norway"
   links:
     - label: "Near Hamar, Norway"
