--- a/_config.yml
+++ b/_config.yml
@@ -74,7 +74,7 @@ author:
     - label: "Hamar, Norway"
       icon: "fas fa-map-marker-alt"
     - label: "https://www.cloudpilot.no"
-      icon: "far fa-link"
+      icon: "fas fa-link"
     - label: " Mail"
       icon: "far fa-envelope"
       url: "mailto:freddie@cloudpilot.no"
